objects/SBQQ__QuoteLine__c.object
<CustomObject>
    <customHelpPage>SBQQ__QuoteLineHelp</customHelpPage>
    <description>Individual line item on a quote.</description>
    <fields>
        <fullName>AdditionalDiscountUnit__c</fullName>
        <description>Used for controlling Additional Discount which supports Percent, Amount, Unit Override, and Total Override</description>
        <label>AdditionalDiscountUnit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Percent</fullName>
                </value>
                <value>
                    <fullName>Amount</fullName>
                </value>
                <value>
                    <fullName>Unit Override</fullName>
                </value>
                <value>
                    <fullName>Total Override</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Audience__c</fullName>
        <description>Stores the value for Audience configuration attribute.</description>
        <label>Audience</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>3 - 25</fullName>
                </value>
                <value>
                    <fullName>26 - 50</fullName>
                </value>
                <value>
                    <fullName>51 - 99</fullName>
                </value>
                <value>
                    <fullName>Adults</fullName>
                    <isActive>false</isActive>
                    <label>Adults</label>
                </value>
                <value>
                    <fullName>Elders</fullName>
                    <isActive>false</isActive>
                    <label>Elders</label>
                </value>
                <value>
                    <fullName>Kids</fullName>
                    <isActive>false</isActive>
                    <label>Kids</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>All Venues</fullName>
                    <default>true</default>
                    <label>All Venues</label>
                </value>
                <value>
                    <fullName>Banquet Halls</fullName>
                </value>
                <value>
                    <fullName>Bar Services &amp; Beverages</fullName>
                </value>
                <value>
                    <fullName>Barn &amp; Farm Weddings</fullName>
                </value>
                <value>
                    <fullName>Beach Weddings</fullName>
                </value>
                <value>
                    <fullName>Boat Weddings</fullName>
                </value>
                <value>
                    <fullName>Church &amp; Temple Weddings</fullName>
                </value>
                <value>
                    <fullName>Country Club Weddings</fullName>
                </value>
                <value>
                    <fullName>Dance Lessons</fullName>
                </value>
                <value>
                    <fullName>Garden Weddings</fullName>
                </value>
                <value>
                    <fullName>Historic Weddings</fullName>
                </value>
                <value>
                    <fullName>Hotel Weddings</fullName>
                </value>
                <value>
                    <fullName>Mansion Weddings</fullName>
                </value>
                <value>
                    <fullName>Museum Weddings</fullName>
                </value>
                <value>
                    <fullName>Park &amp; Outdoor Weddings</fullName>
                </value>
                <value>
                    <fullName>Photo Booths</fullName>
                </value>
                <value>
                    <fullName>Rehearsal Dinner</fullName>
                </value>
                <value>
                    <fullName>Restaurant Weddings</fullName>
                </value>
                <value>
                    <fullName>Rooftop Weddings</fullName>
                </value>
                <value>
                    <fullName>Travel Agents</fullName>
                </value>
                <value>
                    <fullName>Waterfront Weddings</fullName>
                </value>
                <value>
                    <fullName>Wedding Bands</fullName>
                </value>
                <value>
                    <fullName>Wedding Cakes</fullName>
                </value>
                <value>
                    <fullName>Wedding Caterers</fullName>
                </value>
                <value>
                    <fullName>Wedding Decor &amp; Lighting</fullName>
                </value>
                <value>
                    <fullName>Wedding DJs</fullName>
                </value>
                <value>
                    <fullName>Wedding Dresses</fullName>
                </value>
                <value>
                    <fullName>Wedding Favors</fullName>
                </value>
                <value>
                    <fullName>Wedding Florists</fullName>
                </value>
                <value>
                    <fullName>Wedding Hair &amp; Makeup</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Child_Platform_SKU_Number__c</fullName>
        <description>Holds the platform sku number on phantom skus</description>
        <label>Child Platform SKU Number</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Content_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Content Name</label>
        <referenceTo>Content__c</referenceTo>
        <relationshipLabel>Quote Lines</relationshipLabel>
        <relationshipName>Quote_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Content__c</fullName>
        <description>Value from Content Config Attribute.</description>
        <label>Content Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Digital</fullName>
                </value>
                <value>
                    <fullName>Hard Copy</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Duration_in_Months__c</fullName>
        <label>Duration in Months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Edition_Quantity__c</fullName>
        <description>This is used in Price rule to set from Platform Quantity .</description>
        <label>Platform Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>Custom End Date which will populate Standard End Date.</description>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Image__c</fullName>
        <description>Stores the image link for to be used in Quote template</description>
        <formula>IF(NOT ISBLANK(SBQQ__Product__r.SBQQ__ProductPictureID__c),IMAGE(LEFT($Api.Partner_Server_URL_260,FIND(&apos;/services&apos;,$Api.Partner_Server_URL_260))+&apos;/servlet/servlet.ImageServer?id=&apos;+SBQQ__Product__r.SBQQ__ProductPictureID__c+&apos;&amp;oid=&apos;+$Organization.Id,&apos;Product Image&apos;, 50, 50),&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Impressions__c</fullName>
        <label>Impressions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Is_Platform_SKU__c</fullName>
        <formula>IF(SBQQ__ProductOption__r.Feature_Category__c == &apos;Platform - Editions&apos; || SBQQ__ProductOption__r.Feature_Category__c == &apos;Platform - Bundles&apos;, true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Platform SKU</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Ramped__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Ramped</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Line_Status__c</fullName>
        <label>Line Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Existing</fullName>
                </value>
                <value>
                    <fullName>Renewed</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Incremented</fullName>
                </value>
                <value>
                    <fullName>Amended</fullName>
                </value>
                <value>
                    <fullName>Upgraded</fullName>
                </value>
                <value>
                    <fullName>Modified</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LinkedProduct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Stores the lookup for the quote line product linked together</description>
        <label>Linked Product</label>
        <referenceTo>SBQQ__QuoteLine__c</referenceTo>
        <relationshipLabel>Quote Lines (Linked Product)</relationshipLabel>
        <relationshipName>Linked_Product</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <description>Stores the value for Location configuration attribute.</description>
        <label>Location</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>California</fullName>
                </value>
                <value>
                    <fullName>New York</fullName>
                </value>
                <value>
                    <fullName>Texas</fullName>
                </value>
                <value>
                    <fullName>Africa</fullName>
                    <isActive>false</isActive>
                    <label>Africa</label>
                </value>
                <value>
                    <fullName>Asia</fullName>
                    <isActive>false</isActive>
                    <label>Asia</label>
                </value>
                <value>
                    <fullName>US</fullName>
                    <isActive>false</isActive>
                    <label>US</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <label>Market</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Alabama - Birmingham, Huntsville, Tuscaloosa</fullName>
                </value>
                <value>
                    <fullName>Alabama - Montgomery, Dothan</fullName>
                </value>
                <value>
                    <fullName>Alaska - Anchorage, Fairbanks</fullName>
                </value>
                <value>
                    <fullName>American Samoa - American Samoa</fullName>
                </value>
                <value>
                    <fullName>Anguilla - Anguilla</fullName>
                </value>
                <value>
                    <fullName>Antigua and Barbuda - Antigua and Barbuda</fullName>
                </value>
                <value>
                    <fullName>Arizona - Phoenix</fullName>
                </value>
                <value>
                    <fullName>Arizona - Tucson</fullName>
                </value>
                <value>
                    <fullName>Arkansas - Little Rock</fullName>
                </value>
                <value>
                    <fullName>Aruba - Aruba</fullName>
                </value>
                <value>
                    <fullName>Bahamas - Bahamas</fullName>
                </value>
                <value>
                    <fullName>Barbados - Barbados</fullName>
                </value>
                <value>
                    <fullName>Belize - Belize</fullName>
                </value>
                <value>
                    <fullName>Bermuda - Bermuda</fullName>
                </value>
                <value>
                    <fullName>British Virgin Islands - British Virgin Islands</fullName>
                </value>
                <value>
                    <fullName>California - Central Valley, Fresno, Bakersfield</fullName>
                </value>
                <value>
                    <fullName>California - Inland Empire</fullName>
                </value>
                <value>
                    <fullName>California - Los Angeles County</fullName>
                </value>
                <value>
                    <fullName>California - Monterey</fullName>
                </value>
                <value>
                    <fullName>California - Napa Valley, Sonoma County</fullName>
                </value>
                <value>
                    <fullName>California - Orange County</fullName>
                </value>
                <value>
                    <fullName>California - Sacramento, Modesto</fullName>
                </value>
                <value>
                    <fullName>California - San Diego, La Jolla, Coronado, Carlsbad</fullName>
                </value>
                <value>
                    <fullName>California - San Francisco, San Jose, Oakland</fullName>
                </value>
                <value>
                    <fullName>California - Santa Barbara, Ventura, San Luis Obispo</fullName>
                </value>
                <value>
                    <fullName>Cayman Islands - Cayman Islands</fullName>
                </value>
                <value>
                    <fullName>Colorado - Denver, Colorado Springs, Boulder, Vail</fullName>
                </value>
                <value>
                    <fullName>Connecticut - Hartford, New Haven</fullName>
                </value>
                <value>
                    <fullName>Costa Rica - Costa Rica</fullName>
                </value>
                <value>
                    <fullName>Curacao - Curacao</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Max_Impressions__c</fullName>
        <description>Used to store maximum impressions for line which is pulled from Custom Lookup Data</description>
        <label>Max Impressions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Platform_Subscription__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Original platform SKU subscription during amends and renewals populated on Phantom Line</description>
        <label>Original Platform Subscription</label>
        <referenceTo>SBQQ__Subscription__c</referenceTo>
        <relationshipLabel>Quote Lines (Original Platform Subscription)</relationshipLabel>
        <relationshipName>Quote_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Price_For_Max_Impressions__c</fullName>
        <description>Stores price for Maximum Impressions - Data is pulled from Custom Lookup Data</description>
        <label>Price For Max Impressions</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ProductImage__c</fullName>
        <description>Stores the image link and size for product</description>
        <formula>SBQQ__Product__r.ProductImage__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Code__c</fullName>
        <label>Product Code</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Tier__c</fullName>
        <label>Product Tier</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Featured</fullName>
                </value>
                <value>
                    <fullName>Professional</fullName>
                </value>
                <value>
                    <fullName>Spotlight</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <label>Product Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Website</fullName>
                    <default>true</default>
                    <label>Website</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ramp_Enabled__c</fullName>
        <formula>SBQQ__Product__r.Enable_Ramp__c</formula>
        <label>Ramp Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ramp_Label__c</fullName>
        <description>This will hold the label for segmented products . Eg : &apos;Ramp 1&apos;</description>
        <label>Ramp Label</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ramp_Origin__c</fullName>
        <label>Ramp Origin</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ramp_UniqueKey__c</fullName>
        <formula>IF(SBQQ__ProductCode__c!=&apos;&apos;, SBQQ__ProductCode__c+CASESAFEID(SBQQ__RequiredBy__c), &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ramp UniqueKey</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ramped_Line__c</fullName>
        <formula>IF(Is_Ramped__c == true ,&quot;green&quot;,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ramped Line</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Re_Ramped__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox will be set to true if ramping is done from Phantom or row level.</description>
        <label>Re Ramped</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reaction__c</fullName>
        <description>Number of reactions offered for the product</description>
        <label>Reaction</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>16 rxns</fullName>
                </value>
                <value>
                    <fullName>48 rxns</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reactions__c</fullName>
        <description>Number of reactions for the product</description>
        <label>Reactions</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>4 rxns</fullName>
                </value>
                <value>
                    <fullName>16 rxns</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Renewal_Upgrade_Type__c</fullName>
        <label>Renewal Upgrade Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Like to Like</fullName>
                </value>
                <value>
                    <fullName>Upgrade</fullName>
                </value>
                <value>
                    <fullName>Suites Upgrade</fullName>
                </value>
                <value>
                    <fullName>Suites Like to Like</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Renewed_From_Bundle__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Renewed From Bundle</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Renewed_From_Subscription__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Stores the subscription for which this add on was added as part of upgrade path</description>
        <label>Renewed From Subscription</label>
        <referenceTo>SBQQ__Subscription__c</referenceTo>
        <relationshipLabel>Quote Lines (Renewed From Subscription)</relationshipLabel>
        <relationshipName>Quote_Lines1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__AdditionalDiscountAmount__c</fullName>
        <description>Additional customer discount extended on this line item in terms of absolute amount.</description>
        <inlineHelpText>Additional customer discount extended on this line item in the form of an absolute amount.</inlineHelpText>
        <label>Additional Disc. (Amt)</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SBQQ__AdditionalDiscount__c</fullName>
        <description>Total additional discount extends on this line item. Additional discount is defined as discount extended on top of volume discount or negotiated prices.</description>
        <formula>(SBQQ__RegularPrice__c - SBQQ__CustomerPrice__c) *  SBQQ__EffectiveQuantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total additional discounts extended to this line item. Additional discount is defined as discount extended on top of volume discount or negotiated prices.</inlineHelpText>
        <label>Additional Disc.</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SBQQ__AdditionalQuantity__c</fullName>
        <description>Additional quantity for this product which contributes to volume discount calculations.</description>
        <inlineHelpText>Additional quantity for this product that contributes to volume discount calculations</inlineHelpText>
        <label>Additional Quantity</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__AllowAssetRefund__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the underlying asset may have its quantity refunded. Only relevant for Amendments.</description>
        <inlineHelpText>Indicates whether the asset represented by this line may be refunded.</inlineHelpText>
        <label>Allow Asset Refunds</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__BatchQuantity__c</fullName>
        <description>For products sold in batches quantity in each batch. Defaulted from the product record.</description>
        <inlineHelpText>If products are sold in batches, this stores the quantity in each batch, defaulted from the product.</inlineHelpText>
        <label>Batch Quantity</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__BillingFrequency__c</fullName>
        <description>Defines the billing frequency.</description>
        <inlineHelpText>Defines the billing frequency.</inlineHelpText>
        <label>Billing Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SBQQ__BillingFrequency</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__BillingType__c</fullName>
        <description>The billing type that defines when the billing occurs. Billing in advance lets you bill your customers for products or services before you provide them; Billing in arrears lets you bill your customers after the products or services are provided.</description>
        <inlineHelpText>The billing type that defines when the billing occurs. Billing in advance lets you bill your customers for products or services before you provide them; Billing in arrears lets you bill your customers after the products or services are provided.</inlineHelpText>
        <label>Billing Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SBQQ__BillingType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__BlockPrice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Assign a fixed price to a product based on quantity and quantity range. This overrides the automatic calculation of quantity * unit price.</description>
        <inlineHelpText>Assign a fixed price to a product based on quantity and quantity range. This overrides the automatic calculation of quantity * unit price.</inlineHelpText>
        <label>Block Price</label>
        <referenceTo>SBQQ__BlockPrice__c</referenceTo>
        <relationshipLabel>Quote Lines</relationshipLabel>
        <relationshipName>QuoteLines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__Bundle__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether this line item represents a package; meaning, it includes other line items in this quote.</description>
        <inlineHelpText>Indicates whether this line item represents a package; meaning, it includes other line items in this quote.</inlineHelpText>
        <label>Package</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__BundledQuantity__c</fullName>
        <description>For items with calculated quantities this field hold the original (user entered) quantity.</description>
        <inlineHelpText>For items with calculated quantities this field holds the original quantity entered by the user.</inlineHelpText>
        <label>Original Quantity</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__Bundled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates the product on this line item is bundled (included) by another product in this quote. Bundled lines items are zero price and do not allow price or quantity to be edited.</description>
        <inlineHelpText>Indicates the product on this line item is bundled (included) by another product in this quote. Bundled lines items have a zero price and do not allow price or quantity to be edited.</inlineHelpText>
        <label>Bundled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__CarryoverLine__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Denotes this line as an auto-mapped option on an Upgraded Bundle.</description>
        <inlineHelpText>Denotes this line as an auto-selected option of an upgrade bundle.</inlineHelpText>
        <label>Carry-Over Line</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__ChargeType__c</fullName>
        <description>The type of the product charge.  This is a system field that is derived from the associated product.</description>
        <inlineHelpText>The type of the product charge.  This is a system field that is derived from the associated product.</inlineHelpText>
        <label>Charge Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SBQQ__ChargeType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__ComponentCost__c</fullName>
        <description>Total cost of components in this package.</description>
        <inlineHelpText>Total cost of components in this package.</inlineHelpText>
        <label>Component Cost</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SBQQ__ComponentDiscountedByPackage__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Fixes additional discount for this component to the parent package discount.</description>
        <inlineHelpText>Fixes additional discount for this component to the parent package discount.</inlineHelpText>
        <label>Component Discounted By Package</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__ComponentListTotal__c</fullName>
        <description>List total of components in this configuration. This field is only populated if this line item references configurable product.</description>
        <inlineHelpText>List total of components in this configuration. This field is only populated if this line item references a configurable product.</inlineHelpText>
        <label>Component List Total</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SBQQ__ComponentSubscriptionScope__c</fullName>
        <description>Subscription scope set at the component level. This field overrides the subscriptions cope copied from the product.</description>
        <inlineHelpText>Percent of Total scope set at the component level. This field overrides the Percent of Total scope copied from the Product Option.</inlineHelpText>
        <label>Component Percent of Total Scope</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Package</fullName>
                </value>
                <value>
                    <fullName>Components</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                    <label>Package &amp; Components</label>
                </value>
                <value>
                    <fullName>Entire Hierarchy</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__ComponentTotal__c</fullName>
        <description>Sum total of components in this configuration. This field is only populated if this line item references configurable product.</description>
        <inlineHelpText>Sum total of components in this configuration. This field is only populated if this line item references a configurable product.</inlineHelpText>
        <label>Component Net Total</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SBQQ__ComponentUpliftedByPackage__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Fixes uplift for this component to the parent package uplift. Uplift only applies to multi-segmented products.</description>
        <inlineHelpText>Fixes uplift for this component to the parent package uplift. Uplift only applies to multi-segmented products.</inlineHelpText>
        <label>Component Uplifted By Package</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__ComponentVisibility__c</fullName>
        <description>Visibility of this component line item.</description>
        <formula>TEXT(SBQQ__ProductOption__r.SBQQ__QuoteLineVisibility__c)</formula>
        <inlineHelpText>Indicates the visibility of the component line item.</inlineHelpText>
        <label>Component Visibility</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__CompoundDiscountRate__c</fullName>
        <description>Discount rate compounded by quantity (historic).</description>
        <inlineHelpText>Discount rate compounded by quantity (historic).</inlineHelpText>
        <label>Compound Discount (%)</label>
        <precision>8</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SBQQ__ConfigurationRequired__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag that marks this quote line as requiring configuration. Can be used by custom code to request this product be re-configured.</description>
        <inlineHelpText>Flag that marks this quote line as requiring configuration. Can be used by custom code to request this product be re-configured.</inlineHelpText>
        <label>Configuration Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__ContractedPrice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Contracted price if the product has negotiated pricing for opportunity&apos;s account. Contracted Prices are available on the Account and can be applied to any product in any price book.</description>
        <inlineHelpText>Contracted price if the product has negotiated pricing for the opportunity&apos;s account. Contracted Prices are available on the Account and can be applied to any product in any price book.</inlineHelpText>
        <label>Contracted Price</label>
        <referenceTo>SBQQ__ContractedPrice__c</referenceTo>
        <relationshipLabel>Quote Lines</relationshipLabel>
        <relationshipName>Quote_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>